--- a/src/portfolio/frontend/PortFolio.css
+++ b/src/portfolio/frontend/PortFolio.css
@@ -3,7 +3,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    height: 100%;
+    height:100%;
     width: 100%;
 }
 
@@ -43,7 +43,7 @@ body {
     font-weight: 700;
     text-decoration: none;
     color: white;
-    transition: transform 0.2s;
+    transition: transform  0.2s;
 }
 
 .Navlinks a:hover {
@@ -52,7 +52,8 @@ body {
 }
 
 .active {
-    border-bottom: 3px solid cyan;
+   
+    border-bottom:3px solid cyan;
 }
 
 .ScrolltoTopButton {
@@ -88,6 +89,7 @@ body {
 }
 
 .AboutMe {
+    height:100%;
     margin-top: 6rem;
     display: flex;
     flex-direction: column;
@@ -228,6 +230,7 @@ body {
 }
 
 .Projects {
+    height:100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -415,6 +418,7 @@ textarea {
 }
 
 .ContactME {
+    height: 100vh;
     margin-top: 7rem;
 }
 
