--- a/src/portfolio/frontend/PortFolio.css
+++ b/src/portfolio/frontend/PortFolio.css
@@ -3,7 +3,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    height:100%;
+    height: 100%;
     width: 100%;
 }
 
@@ -36,24 +36,48 @@ body {
 }
 
 .Navbar2 {
+    background-color: white;
     display: none;
 }
+
+.Navbar2 a {
+    color: black;
+    text-decoration: none;
+}
+
+.Navbar2 .active {
+    border: none;
+    color: crimson;
+}
+
+.Navbar2 a:active {
+    background-color: rgba(46, 44, 44, 0.703);
+}
+
 
 .Navlinks a {
     font-weight: 700;
     text-decoration: none;
     color: white;
-    transition: transform  0.2s;
+    transition: transform 0.2s;
+
 }
 
-.Navlinks a:hover {
-    transform: scale(1.1);
-    color: cyan;
+.Navlinks a::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 3px;
+    background: cyan;
+    transition: width .3s;
 }
 
-.active {
-   
-    border-bottom:3px solid cyan;
+.Navlinks a:hover::after {
+    width: 100%;
+}
+
+a.active {
+    color: aqua;
 }
 
 .ScrolltoTopButton {
@@ -73,11 +97,11 @@ body {
 
 .HomeParentDiv {
     height: 100vh;
-    width:80%;
-    display:flex;
-    justify-content:space-evenly;
+    width: 80%;
+    display: flex;
+    justify-content: space-evenly;
     align-items: center;
-   
+
 }
 
 .HomeLeftSection {
@@ -89,7 +113,7 @@ body {
 }
 
 .AboutMe {
-    height:100%;
+    height: 100%;
     margin-top: 6rem;
     display: flex;
     flex-direction: column;
@@ -230,7 +254,7 @@ body {
 }
 
 .Projects {
-    height:100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
