--- a/src/portfolio/frontend/PortFolio.css
+++ b/src/portfolio/frontend/PortFolio.css
@@ -275,8 +275,8 @@ a.active {
 }
 
 .layer {
+    position:relative;
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), black);
-    position: relative;
     height: 0%;
     left: 0;
     top: -100%;
@@ -285,16 +285,19 @@ a.active {
     align-items: center;
     justify-content: center;
     transition: height 0.5s;
-
 }
 
 .imagedivs {
     width: 40%;
+}
 
+.imagedivs img {
+    width: 100%;
+    height: 100%;
 }
 
 .imagedivs:hover .layer {
-    height: 100%;
+    height:100%;
 }
 
 .imagedivs2 {
@@ -447,6 +450,19 @@ textarea {
 }
 
 .IMCcertificate {
-    width: 25rem;
-    margin-top: 5rem;
+    margin-top: 7rem;
+}
+
+.IMCcertificateparent{
+    width:100%;
+    padding:1rem;
+    height:100vh;
+    display:flex;
+    justify-content: center;
+}
+.IMCcertificateparent2{
+    width:100%;
+    height:100vh;
+    display:flex;
+    justify-content: center;
 }
