--- a/src/portfolio/frontend/responsive.css
+++ b/src/portfolio/frontend/responsive.css
@@ -56,7 +56,7 @@
         z-index: 3;
         position: absolute;
         top: 0px;
-        height: 40vh;
+        height: 50vh;
     }
 
     .Navbar2 span {
@@ -181,18 +181,23 @@
         background-color: rgba(235, 229, 229, 0.128);
 
     }
-
-    .imagedivs {
-        width: 100%;
+    .carousel-container {
+        width: 80%;
     }
-
-    .ProjectImages2 {
-        flex-direction: column;
+    .slick-prev {
+        left: -24px !important;
     }
-
-    .imagedivs2 {
-        width: 100%;
-
+    
+    .slick-next {
+        right: -24px !important;
+    }
+    
+    .slick-prev::before {
+        font-size: 1rem !important;
+    }
+    
+    .slick-next::before {
+        font-size: 1rem !important;
     }
 
     .ExpHeading {
@@ -392,6 +397,25 @@
 
     form {
         padding: 0rem 1rem;
+    }
+    .carousel-container {
+        margin-top: 3rem;
+        width: 80%;
+    }
+    .slick-prev {
+        left: -2rem !important;
+    }
+    
+    .slick-next {
+        right: -2rem !important;
+    }
+    
+    .slick-prev::before {
+        font-size: 1.5rem !important;
+    }
+    
+    .slick-next::before {
+        font-size: 1.5rem !important;
     }
 
 }
