--- a/src/portfolio/frontend/responsive.css
+++ b/src/portfolio/frontend/responsive.css
@@ -173,11 +173,6 @@
 
     }
 
-
-    .AboutMeParent {
-        height: 95vh;
-    }
-
     .carousel-container {
         width: 80%;
     }
@@ -203,9 +198,11 @@
         display: flex;
         justify-content: center;
     }
-
+    .ExperienceDivs {
+        width:100%;
+    }
     .Experience {
-        margin-top: 2rem;
+        margin-top:3rem;
     }
 
     .ListofExp {
@@ -221,10 +218,11 @@
         height: 70%;
         margin-top: 4rem;
         margin-bottom: 2rem;
+       
     }
 
     .CertificateStyle {
-        width: 20rem;
+        width: 100%;
         height: 20rem;
     }
 
@@ -288,7 +286,14 @@
     .ExperienceDivs {
         gap: 15%;
     }
-
+    
+    .ListofExp {
+        width: 100%;
+      
+    }
+    .ExperienceDivs {
+        width:100%;
+    }
     .CertificateStyle {
         width: 28rem;
         height: 25rem;
@@ -453,6 +458,9 @@
     .ExperienceDivs {
         gap: 11.5%;
     }
+    .ExperienceDivs {
+        width:100%;
+    }
 
     .SocialIcons {
         width: 100%;
@@ -502,6 +510,9 @@
 
     .ExperienceDivs {
         gap: 11.5%;
+    }
+    .ExperienceDivs {
+        width:100%;
     }
 
     .SocialIcons {
