--- a/src/portfolio/frontend/PortFolio.css
+++ b/src/portfolio/frontend/PortFolio.css
@@ -470,7 +470,7 @@ textarea {
 
 .IMCcertificateparent2 {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
