--- a/src/portfolio/frontend/PortFolio.css
+++ b/src/portfolio/frontend/PortFolio.css
@@ -101,7 +101,6 @@ a.active {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-
 }
 
 .HomeLeftSection {
@@ -326,10 +325,10 @@ a.active {
 }
 
 .Button {
-    border-radius:5px;
+    border-radius: 5px;
     font-weight: 700;
     transition: transform 0.3s ease;
-    
+
 }
 
 .Button:hover {
@@ -353,13 +352,14 @@ a.active {
 
 .ExperienceDivs {
     display: flex;
-    justify-content:space-between;
-    width:50%;
+    justify-content: space-between;
+    width: 50%;
 }
-.ExperienceDivs1{
+
+.ExperienceDivs1 {
     display: flex;
     justify-content: start;
-     
+
 }
 
 
@@ -461,7 +461,7 @@ textarea {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    gap:1rem;
+    gap: 1rem;
 }
 
 .IMCcertificate {
@@ -475,4 +475,45 @@ textarea {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.Assignment {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.AssigmentContent {
+    margin-top: 7rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.Internals {
+    margin-top:2rem;
+    width: 45%;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    flex-direction: column;
+    gap:4rem;
+}
+
+.Internals a {
+    text-decoration: none;
+    color:white;
+    font-weight: 700;
+    background-color: rgba(98, 93, 93, 0.626);
+    padding:0.5rem;
+    
+}   
+.Subinternals{
+    display: flex;
+    align-items: center;
+    gap:2rem;
+    justify-content: space-around;
 }
