--- a/src/portfolio/frontend/PortFolio.css
+++ b/src/portfolio/frontend/PortFolio.css
@@ -485,7 +485,7 @@ textarea {
 }
 
 .AssigmentContent {
-    margin-top: 7rem;
+    margin-top:8%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -494,26 +494,27 @@ textarea {
 }
 
 .Internals {
-    margin-top:2rem;
+    margin-top: 2rem;
     width: 50%;
     display: flex;
     align-items: center;
-    justify-content:center;
+    justify-content: center;
     flex-direction: column;
-    gap:3rem;
+    gap: 3rem;
 }
 
 .Internals a {
     text-decoration: none;
-    color:white;
+    color: white;
     font-weight: 700;
     background-color: rgba(98, 93, 93, 0.626);
-    padding:0.5rem;
-    
-}   
-.Subinternals{
+    padding: 0.5rem;
+
+}
+
+.Subinternals {
     display: flex;
     align-items: center;
-    gap:2rem;
+    gap: 2rem;
     justify-content: space-around;
 }
