--- a/src/portfolio/frontend/responsive.css
+++ b/src/portfolio/frontend/responsive.css
@@ -276,7 +276,9 @@
     }
 
     .Assignment {
+        margin-top: 7rem;
         padding: 0 0;
+        height: 90vh;
     }
 }
 
@@ -474,7 +476,7 @@
     }
 
     .Assignment {
-        height: 85vh;
+        height: 90vh;
     }
 
 
@@ -531,15 +533,13 @@
     }
 
     .Assignment {
-        height: 85vh;
+        height: 90vh;
     }
 }
 
 @media screen and (min-width:1024px) and (max-width:1440px) {
 
-    .Assignment {
-        height: 85vh;
-    }
+
 
     .Myimage {
         width: 10rem;
@@ -584,5 +584,15 @@
 
     .custom-table2 {
         display: none;
+    }
+
+    .Assignment {
+        height: 90vh;
+    }
+}
+
+@media screen and (min-width:1440px) and (max-width:1740px) {
+    .Assignment {
+        height: 90vh;
     }
 }
